--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -99,10 +99,8 @@ h6 {
 // Source code ===========================================
 // although most of the configuration and syntax highlights comes from addHighlights step
 code {
-  border-radius: 3px;
-  color: var(--font-color);
-  background-color:var(--highlight-grey);
-  word-wrap: break-word;
+  font-size: 16px;
+  border-radius: 5px;
 }
 
 // Internal Hyperlinks ============================================
